# deepwiki2md

./: .gitignore  README.md  README_JP.md  deepwiki2md.py  extract_subgraphs.py  html_to_markdown.py  pyproject.toml  requirements.txt
deepwiki2md/: __init__.py  __main__.py  cli.py  html_to_markdown.py
deepwiki2md/locale/ja/LC_MESSAGES/: deepwiki2md.po
locale/ja/LC_MESSAGES/: deepwiki2md.mo  deepwiki2md.po
