[project]
name = "deepwiki2md"
version = "1.0.1"
description = "DeepWikiからドキュメントを取得し、Markdown形式に変換するツール"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "selenium>=4.0.0",
    "beautifulsoup4>=4.9.0",
    "webdriver-manager>=4.0.0",
]

[project.scripts]
deepwiki2md = "deepwiki2md:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
