[project]
name = "deepwiki2md"
version = "1.1.1"
description = "A tool to export DeepWiki documentation to Markdown format"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "animalmatsuzawa"},
]
keywords = ["deepwiki", "markdown", "converter", "documentation", "export"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "selenium>=4.37.0,<5",
    "beautifulsoup4>=4.12.0,<5",
    "webdriver-manager>=4.0.0,<5",
]

[project.urls]
Homepage = "https://github.com/matsu582/deepwiki2md"
Repository = "https://github.com/matsu582/deepwiki2md"
Issues = "https://github.com/matsu582/deepwiki2md/issues"

[project.scripts]
deepwiki2md = "deepwiki2md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepwiki2md"]
